# mighttpd2

./: .gitignore  .travis.yml  Buffer.hs  ChangeLog.md  Config.hs  Daemon.hs  FileCGIApp.hs  FileCache.hs  Log.hs  Mighty.hs  Multi.hs  Net.hs  Parser.hs  Process.hs  README.md  Report.hs  Resource.hs  Route.hs  Signal.hs  Single.hs  State.hs  Types.hs  URLMap.hs  Utils.hs  example.conf  example.route  hcar-mighttpd2.tex  mighttpd2.cabal  mightyctl.hs  mkindex.hs  sample.conf  sample.route
.github/workflows/: main.yml
Config/: Internal.hs
Log/: Apache.hs  Check.hs  Date.hs  File.hs  Hput.hs  Rotate.hs  Stdout.hs  Types.hs
Program/: Mighty.hs
Program/Mighty/: Apache.hs  ByteString.hs  Config.hs  Date.hs  Exception.hs  FileCache.hs  FileLog.hs  IORef.hs  IP.hs  LogMsg.hs  Logger.hs  Network.hs  Parser.hs  Process.hs  Report.hs  Resource.hs  Route.hs  Signal.hs  State.hs  Types.hs
Program/Mighty/Dhall/: Block.dhall  Option.dhall  Option.hs  Route.dhall  Route.hs  RouteDB.dhall
cbits/: setcap.c
conf/: Option.dhall  configDefault.dhall  example.conf  example.dhall  optionDefault.dhall  route.dhall
docs/: config.md  index.md  install.md  operation.md
src/: Config.hs  Daemon.hs  FileCGIApp.hs  FileCache.hs  Mighty.hs  Multi.hs  Net.hs  Parser.hs  Process.hs  Report.hs  Route.hs  Server.hs  Signal.hs  Single.hs  State.hs  Types.hs  Utils.hs  WaiApp.hs
src/Config/: Internal.hs
test/: ConfigSpec.hs  RouteSpec.hs  Test.hs  sample.conf  sample.route
utils/: mightyctl.hs  mkindex.hs  renew-cert.sh  restart.sh
