Name:                   mighttpd2
Version:                3.4.5
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               High performance web server on WAI/warp
Description:            High performance web server to handle static
                        files and CGI on WAI/warp.
                        Reverse proxy functionality is also provided
                        to connect web applications behind.
Homepage:               http://www.mew.org/~kazu/proj/mighttpd/
Category:               Network, Web
Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Dir:               conf
Data-Files:             example.conf example.route

Flag tls
  Description:          Support http over tls (https).
  Default:              False

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Program.Mighty
                        Program.Mighty.ByteString
                        Program.Mighty.Config
                        Program.Mighty.Network
                        Program.Mighty.Parser
                        Program.Mighty.Process
                        Program.Mighty.Report
                        Program.Mighty.Resource
                        Program.Mighty.Route
                        Program.Mighty.Signal
  Build-Depends:        base >= 4.9 && < 5
                      , array
                      , async
                      , auto-update
                      , byteorder
                      , bytestring
                      , case-insensitive
                      , conduit >= 1.1
                      , conduit-extra
                      , directory
                      , filepath
                      , http-date
                      , http-types
                      , network
                      , parsec >= 3
                      , resourcet
                      , streaming-commons
                      , unix
                      , unix-time
                      , unordered-containers
                      , wai >= 3.2 && < 3.3
                      , wai-app-file-cgi >= 3.1.1 && < 3.2
                      , warp >= 3.2.21 && < 3.3
  if impl(ghc >= 8)
    Default-Extensions:  Strict StrictData

Executable mighty
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Main-Is:              Mighty.hs
  GHC-Options:          -Wall -threaded -rtsopts
  if flag(tls)
    Cpp-Options:        -DHTTP_OVER_TLS
    Build-Depends:      async
                      , tls-session-manager
  Build-Depends:        base >= 4.0 && < 5
                      , bytestring
                      , directory
                      , filepath
                      , http-client >= 0.5
                      , http-date
                      , http-types
                      , mighttpd2
                      , network
                      , conduit-extra
                      , transformers
                      , unix
                      , streaming-commons
                      , wai >= 3.2 && < 3.3
                      , wai-app-file-cgi >= 3.1.1 && < 3.2
                      , wai-logger >= 2.3.0
                      , warp >= 3.2.7 && < 3.3
                      , wai-http2-extra >= 0.1
  if flag(tls)
    Build-Depends:      tls
                      , warp-tls >= 3.2 && < 3.3
  Other-Modules:        Server
                        WaiApp
                        Paths_mighttpd2
  if impl(ghc >= 8)
    Default-Extensions:  Strict StrictData

Executable mighty-mkindex
  Default-Language:     Haskell2010
  HS-Source-Dirs:       utils, src
  Main-Is:              mkindex.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , directory
                      , old-locale
                      , time
                      , unix

Executable mightyctl
  Default-Language:     Haskell2010
  HS-Source-Dirs:       utils, src
  Main-Is:              mightyctl.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , unix
                      , mighttpd2
  if impl(ghc >= 8)
    Default-Extensions:  Strict StrictData

Test-Suite spec
  Default-Language:     Haskell2010
  Main-Is:              Spec.hs
  Hs-Source-Dirs:       test, src
  Type:                 exitcode-stdio-1.0
  Other-Modules:        ConfigSpec
                        RouteSpec
  Build-Depends:        base >= 4 && < 5
                      , hspec >= 1.3
                      , mighttpd2
                      , http-client >= 0.5
  if flag(tls)
    Build-Depends:      tls
                      , warp-tls >= 3.2 && < 3.3
  if impl(ghc >= 8)
    Default-Extensions:  Strict StrictData

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/mighttpd2.git
